--- a/app/views/chats/show.haml
+++ b/app/views/chats/show.haml
@@ -2,7 +2,7 @@
 
 %div#chat_messages
   - @chat.messages.each do |msg|
-    %li= msg.input_text
+    %li= msg.created_at.to_s + ": " + msg.input_text
 
 
 = form_tag "/chats/#{params[:id]}/messages" do
