--- a/app/views/chats/index.haml
+++ b/app/views/chats/index.haml
@@ -1,7 +1,7 @@
 %div#my_chats
 
   - @chats.reverse.each do |chat|
-    %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + " " + link_to("Remove", chat_path(chat.id), :method => :delete)
+    %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + " " + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat')
 
 
 = button_tag "New chat", :id => 'new_chat'
