--- a/app/views/chats/index.haml
+++ b/app/views/chats/index.haml
@@ -1,6 +1,6 @@
 %div#my_chats
 
-  - @chats.reverse.each do |chat|
+  - @chats.each do |chat|
     %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + " " + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat')
 
 
