--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,1 +1,13 @@
-%h1 This is index
+%div#my_games
+
+  - @games.each do |chat|
+    %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + " " + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat')
+
+
+= button_tag "New chat", :id => 'new_chat'
+
+%div#new_game
+  = label_tag :game_language
+  = select(:game, :language, LANGUAGES)
+
+  = submit_tag "New game", :id => :create_new_game
