--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -1,3 +1,12 @@
 .invisible {
   display: none;
 }
+
+#chat_boxLELELE {
+  height: 75px;
+  width: 75px;
+  background-color: #ff9d00;
+  border-radius: 1em;
+  /*margin: 20em;*/
+  /*padding: 1em;*/
+}
