--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -2,11 +2,17 @@
   display: none;
 }
 
-#chat_boxLELELE {
-  height: 75px;
-  width: 75px;
+#chat_box {
+  /*height: 75px;*/
+  max-width: 10em;
   background-color: #ff9d00;
   border-radius: 1em;
-  /*margin: 20em;*/
-  /*padding: 1em;*/
+  margin: 1em;
+  padding: 0.4em;
+  list-style: none;
+}
+
+.translation {
+  font-weight: bold;
+  font-size: 1.2em;
 }
