--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,6 +7,10 @@
     = csrf_meta_tags
   %body
 
+
     %nav
-      = smartnav
+      %ul
+        = smartnav.html_safe
+
+  %div.content
     = yield
