--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -14,9 +14,6 @@ body{
   padding: 1em;
 }
 
-.sticker{
-}
-
 #audio{
   width: 45px;
   height: 10px;
@@ -33,13 +30,17 @@ body{
 }
 
 #chat_box {
-  /*height: 75px;*/
   max-width: 10em;
   background-color: #ff9d00;
   border-radius: 1em;
   margin: 1em;
   padding: 0.4em;
   list-style: none;
+}
+
+img.sticker {
+  max-height: 10em;
+  max-width: 10em;
 }
 
 .translation {
