--- a/app/views/chats/index.haml
+++ b/app/views/chats/index.haml
@@ -10,6 +10,6 @@
 
 %div#new_chat
   = label_tag :chat_language
-  = select(:chat, :language, LANGUAGES)
+  = select(:chat, :language, @language_select)
 
   = submit_tag "Create new chat", :id => :create_new_chat
