--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -45,14 +45,17 @@ body{
 nav{
   margin-top: 0.5em;
   max-width: 20%;
-  max-height: 40%;
+  max-height: 100%;
   position: fixed;
+  background-color: #665d5d;
+  border: 0.2em solid black;
+  border-radius: 5%;
 }
 
 nav a{
   display: block;
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 nav ul{
@@ -61,6 +64,7 @@ nav ul{
 
 nav ul li:nth-child(5n){
   font-weight: bold;
+  color: white;
 }
 
 nav a:hover{
