--- a/app/views/chats/show.haml
+++ b/app/views/chats/show.haml
@@ -11,8 +11,8 @@
       %li= msg.input_text
       %li.translation= msg.translation
 
-
-= form_tag "/chats/#{params[:id]}/messages" do
-  = text_field_tag :input_text, nil, :autocomplete => "off", :autofocus => :true
-  = submit_tag "Speak", :id => "speak"
-  = button_tag "Top", :id => "scroll-to-top"
+%div#input
+  = form_tag "/chats/#{params[:id]}/messages" do
+    = text_field_tag :input_text, nil, :autocomplete => "off", :autofocus => :true
+    = submit_tag "Speak", :id => "speak"
+    = button_tag "Top", :id => "scroll-to-top"
