--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -1,6 +1,14 @@
+#word_list {
+  width
+}
+
 #game_window {
   width: 100%;
-  height: 100em;
+  height: 100%;
   background: #C9E7EF;
   margin: 0;
+}
+
+#input.game {
+  position: absolute;
 }
