--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -18,7 +18,7 @@
     %div#boxcontrol
     =link_to 'Play', "", :id => 'btnplay'
 
-  %div#container
+  %div#game_container
     %div.animatedbox
       %span.match
       %span.unmatch
