--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,7 +9,7 @@
 
 
     %nav
-      = image_tag(@current_user.avatar, :class => 'avatar')
+      = image_tag(@current_user.avatar, :class => 'avatar') if @current_user
       %ul
         = smartnav.html_safe
 
