--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -1,99 +1,123 @@
-   * {
-        font-family: Arial;
-    }
-    #container {
-        background: #333;
-        width: 600px;
-        height: 400px;
-        margin: 0 auto;
-        -webkit-border-radius: 0.7em;
-        -moz-border-radius: 0.7em;
-        border-radius: 0.7em;
-        padding: 20px 0;
-    }
-    .animatedbox {
-        background: #ff0084;
-        position: absolute;
-        padding: 8px 20px 12px 15px;
-        font-size: 36px;
-        color: #ffffff;
-        -webkit-border-radius: 0.5em 2.5em 2.5em 0.5em;
-        -moz-border-radius: 0.5em 2.5em 2.5em 0.5em;
-        border-radius: 0.5em 2.5em 2.5em 0.5em;
-        left: 500px;
-        letter-spacing: 3px;
-        display: none;
-    }
-    .match {
-        color: #000000;
-    }
-    .current {
-        background: #0099cc;
-    }
-    #toolbar {
-        background: #ff0084;
-        -webkit-border-radius: 1.0em;
-        -moz-border-radius: 1.0em;
-        border-radius: 1.0em;
-        width: 600px;
-        height: 40px;
-        padding: 10px 0 10px 0;
-        margin: 0 auto;
-        text-align: center;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
-    #boxscore {
-        float: left;
-        font-size: 22px;
-        margin-left: 15px;
-        color: #ffffff;
-    }
-    #score {
-        font-weight: bold;
-        font-size: 24px;
-        padding: 0 3px;
-    }
-    #boxcontrol {
-        float: right;
-        margin-right: 15px;
-    }
-    #boxcontrol a {
-        font-size: 22px;
-        color: #ffffff;
-    }
-    .clear {
-        margin-top: 5px;
-        font-size: 11px;
-        font-weight: bold;
-        color: #ffffff;
-        clear: both;
-    }
-    #main {
-        background: #0099cc;
-        margin-top: 0;
-        padding: 2px 0 4px 0;
-        text-align: center;
-    }
-    #main a {
-        color: #ffffff;
-        text-decoration: none;
-        font-size: 12px;
-        font-weight: bold;
-        font-family: Arial;
-    }
-    #main a:hover {
-        text-decoration: underline;
-    }
-    #btnsubmit, #userInput {
-        margin-top: 65%;
-    }
+* {
+    font-family: Arial;
+}
+#container {
+    background: #333;
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    -webkit-border-radius: 0.7em;
+    -moz-border-radius: 0.7em;
+    border-radius: 0.7em;
+    padding: 20px 0;
+}
+.animatedbox {
+    background: #ff0084;
+    position: absolute;
+    padding: 8px 20px 12px 15px;
+    font-size: 36px;
+    color: #ffffff;
+    -webkit-border-radius: 0.5em 2.5em 2.5em 0.5em;
+    -moz-border-radius: 0.5em 2.5em 2.5em 0.5em;
+    border-radius: 0.5em 2.5em 2.5em 0.5em;
+    left: 500px;
+    letter-spacing: 3px;
+    display: none;
+}
+.match {
+    color: #000000;
+}
+.current {
+    background: #0099cc;
+}
+#toolbar {
+    background: #ff0084;
+    -webkit-border-radius: 1.0em;
+    -moz-border-radius: 1.0em;
+    border-radius: 1.0em;
+    width: 600px;
+    height: 40px;
+    padding: 10px 0 10px 0;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#boxscore {
+    float: left;
+    font-size: 22px;
+    margin-left: 15px;
+    color: #ffffff;
+}
+#score {
+    font-weight: bold;
+    font-size: 24px;
+    padding: 0 3px;
+}
+#boxcontrol {
+    float: right;
+    margin-right: 15px;
+}
+#boxcontrol a {
+    font-size: 22px;
+    color: #ffffff;
+}
+.clear {
+    margin-top: 5px;
+    font-size: 11px;
+    font-weight: bold;
+    color: #ffffff;
+    clear: both;
+}
+#main {
+    background: #0099cc;
+    margin-top: 0;
+    padding: 2px 0 4px 0;
+    text-align: center;
+}
+#main a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: Arial;
+}
+#main a:hover {
+    text-decoration: underline;
+}
+#userAnswer {
+    margin-left: 30%;
+    margin-bottom: 30%;
+}
 
-    #userInput {
-        width: 300px;
-    }
+#userInput {
+    width: 300px;
+}
 
-    body {
-        margin: 0;
-        padding: 0;
-    }
+#word_list{
+    display: inline;
+}
+
+#word_list h2{
+    display: inline-block;
+    margin: 10px;
+    background-color: #F0FAFF;
+    border-radius: 0.5em;
+    padding: 15px;
+    width: 160px;
+    text-align: center;
+}
+
+#btnplay{
+    text-decoration: none;
+    font-size: 20px;
+    background-color: pink;
+    padding: 5px;
+    border-radius: 0.5em;
+    margin-left: 35%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
