--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,7 +1,7 @@
 %div#word_list
 
 %div#game_window
-  %h1= "Battle fireball " + LANGUAGES.invert[@game.language]
+  %h1#game_title= "Battle fireball " + LANGUAGES.invert[@game.language]
   %div#lives
   %div#stage_bar
     %div#stage_one.stage
