--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,51 @@
  *= require_tree .
  *= require_self
  */
+.editheader{
+  font-size: 50px;
+  margin-left: -10px;
+}
+
+form{
+  min-width: 200px;
+}
+
+.formgroup{
+  display: block;
+}
+
+.formgroup input{
+  width: 500px;
+  font-size: 30px;
+  border-bottom: 2px solid #420d00;
+  background-color: transparent;
+  padding: 1em;
+  margin-bottom: 1em;
+  display: block;
+  color: rgba(0,0,0,.3);
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  transition: all 0.30s ease-in-out;
+}
+
+.formgroup input:focus{
+  outline: 0;
+  border-bottom: 8px solid #f34223;
+  color: rgba(0,0,0,1);
+}
+
+.formgroup label{
+  display: block;
+  color: #420d00;
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  transition: all 0.30s ease-in-out;
+}
+
+.formgroup label:focus{
+  color: #f34223;
+  font-size: 20px;
+}
+
