--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,19 @@
  *= require_tree .
  *= require_self
  */
+body{
+  background-color: rgba(0,0,0,0.9);
+}
+
+h2{
+  color: #f34223;
+}
 .editheader{
   font-size: 50px;
   margin-left: -10px;
+  color: #dd1c1c;
 }
+
 
 form{
   min-width: 200px;
@@ -34,29 +43,29 @@ form{
   padding: 1em;
   margin-bottom: 1em;
   display: block;
-  color: rgba(0,0,0,.3);
+  color: rgba(0,0,0,.5);
   -webkit-transition: all 0.30s ease-in-out;
   -moz-transition: all 0.30s ease-in-out;
   -o-transition: all 0.30s ease-in-out;
   transition: all 0.30s ease-in-out;
 }
 
-.formgroup input:focus{
+.formgroup input.active{
   outline: 0;
   border-bottom: 8px solid #f34223;
-  color: rgba(0,0,0,1);
+  color: rgba(255,255,255,1);
 }
 
 .formgroup label{
   display: block;
   color: #420d00;
-  -webkit-transition: all 0.30s ease-in-out;
-  -moz-transition: all 0.30s ease-in-out;
-  -o-transition: all 0.30s ease-in-out;
-  transition: all 0.30s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
-.formgroup label:focus{
+.formgroup label.active{
   color: #f34223;
   font-size: 20px;
 }
