--- a/app/views/chats/index.haml
+++ b/app/views/chats/index.haml
@@ -3,12 +3,12 @@
 %div#my_chats
   %ul
     - @chats.each do |chat|
-      %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat invisible')
+      %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat invisible') + button_tag("X", :class => 'show_delete_chat')
 
 
-= button_tag "New chat", :id => 'new_chat'
+= button_tag "New chat", :id => 'new_chat_button'
 
-%div#new_chat
+%div#new_chat.invisible
   = label_tag :chat_language
   = select(:chat, :language, @language_select)
 
