--- a/app/views/chats/index.haml
+++ b/app/views/chats/index.haml
@@ -3,7 +3,7 @@
 %div#my_chats
   %ul
     - @chats.each do |chat|
-      %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat invisible') + button_tag("X", :class => 'show_delete_chat')
+      %li= link_to( LANGUAGES.invert[chat.language], chat_path(chat.id) ) + link_to("Remove", chat_path(chat.id), :method => :delete, :class => 'delete_chat invisible') + button_tag("x", :class => 'show_delete_chat')
 
 
 = button_tag "New chat", :id => 'new_chat_button'
