--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,7 @@ body{
 
 h1{
   color: #f34223;
+  font-size: 50px;
 }
 
 
@@ -75,3 +76,38 @@ form{
   font-size: 20px;
 }
 
+.formmenu #user_native_language{
+  min-width: 500px;
+  display: block;
+  padding: .5em 0 .5em 38%;
+  font-size: 30px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 0.5em;
+}
+
+.formsubmit{
+  text-align: center;
+  margin-bottom: 10em;
+}
+
+.formsubmit input{
+  font-size: 20px;
+  padding: 1em;
+  font-size: 20px;
+  border-radius: 0.5em;
+  box-shadow: 2px 4px 0 0;
+  background-color: #f34223;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.formsubmit input:hover{
+  box-shadow: 0 0 0 0;
+  background-color: #008DBC;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+}
