--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -15,7 +15,7 @@
     / %div.formgroup
     /   = f.label :avatar
     /   = f.text_field :avatar
-    %div.formgroup
+    %div.formmenu
       = f.label :native_language, "Your Language"
       = f.select(:native_language, LANGUAGES)# makes a dropdown from the constant LANGUAGES
     %div.formsubmit
