--- a/app/views/chats/show.haml
+++ b/app/views/chats/show.haml
@@ -5,9 +5,11 @@
 
 %div#chat_messages
   - @chat_messages.each do |msg|
-    %div#chat_box
+    %div#chat_box.left
+      %li= msg.input_text
+    %div#chat_box.right
       %li= image_tag( msg.image , :class => "sticker" )
-      %li= msg.created_at.strftime( "%b %e %Y %l:%M %p" ) + ": "
+      %li.timestamp= msg.created_at.strftime( "%b %e %Y %l:%M %p" ) + ": "
       %li= msg.input_text
       %li.translation= msg.translation
       %audio{:src => msg.sound }
