--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,13 +88,13 @@ form{
 
 .formsubmit{
   text-align: center;
+  width: 100%;
   margin-bottom: 10em;
 }
 
 .formsubmit input{
-  font-size: 20px;
   padding: 1em;
-  font-size: 20px;
+  font-size: 25px;
   border-radius: 0.5em;
   box-shadow: 2px 4px 0 0;
   background-color: #f34223;
