--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,9 +1,9 @@
 %h1 Battle Fireball
 
 %div#my_games
-
-  - @games.each do |game|
-    %li= link_to( LANGUAGES.invert[game.language], game_path(game.id) ) + " " + link_to("Remove", game_path(game.id), :method => :delete, :class => 'delete_game')
+  %ul
+    - @games.each do |game|
+      %li= link_to( LANGUAGES.invert[game.language], game_path(game.id) ) + " " + link_to("Remove", game_path(game.id), :method => :delete, :class => 'delete_game invisible') + button_tag("x", :class => 'show_delete_game')
 
 
 = button_tag "New game", :id => 'new_game'
