--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -77,6 +77,11 @@ audio {
   padding: 2em;
 }
 
+#chat_box embed {
+  width: 50px;
+  height: 80px;
+}
+
 img.sticker {
   max-height: 10em;
   max-width: 10em;
