--- a/app/views/chats/show.haml
+++ b/app/views/chats/show.haml
@@ -12,7 +12,8 @@
       %li.timestamp= msg.created_at.strftime( "%b %e %Y %l:%M %p" ) + ": "
       %li= msg.input_text
       %li.translation= msg.translation
-      %iframe{:src => msg.sound }
+      %embed{:src => msg.sound, :autoplay => :false }
+        %param{:name => :autoplay, :value => :false}
 
 %div#input
   = form_tag "/chats/#{params[:id]}/messages" do
