i'm done for the day

--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -121,15 +121,17 @@ img.sticker {
   border-radius: 0.5em;
   box-shadow: 1px 2px 0 0;
   background-color: #f34223;
-  -webkit-transition: all 0.15s ease-in-out;
-  -moz-transition: all 0.15s ease-in-out;
-  -o-transition: all 0.15s ease-in-out;
-  transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 #speak:hover, #scroll-to-top:hover{
   box-shadow: 0 0 0 0;
-  background-color: #f94a2f;
+  background-color: #008DBC;
+  font-weight: bold;
+  color: white;
 }
 /*END INPUT BUTTONS*/
 /*END CHAT
